<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RadioGroup
        android:gravity="center"
        android:orientation="horizontal"
        android:id="@+id/shapeRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shapeType">

        <RadioButton
            android:id="@+id/brushRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/label_brush"
            android:buttonTint="@color/pink" />

        <RadioButton
            android:id="@+id/lineRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_line"
            android:buttonTint="@color/pink" />

        <RadioButton
            android:id="@+id/ovalRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_oval"
            android:buttonTint="@color/pink" />

        <RadioButton
            android:id="@+id/rectRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_rectangle"
            android:buttonTint="@color/pink" />
    </RadioGroup>

    <SeekBar
        android:id="@+id/shapeSize"
        android:padding="@dimen/_3sdp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:progress="25"
        android:progressDrawable="@drawable/progress_main"
        android:thumb="@drawable/thumb"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtShapeSize" />

    <SeekBar
        android:id="@+id/shapeOpacity"
        android:padding="@dimen/_3sdp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:max="255"
        android:progress="255"
        android:progressDrawable="@drawable/progress_main"
        android:thumb="@drawable/thumb"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtOpacity" />

    <TextView
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:id="@+id/txtShapeSize"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Brush"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shapeRadioGroup" />

    <TextView
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:id="@+id/txtOpacity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Opacity"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtShapeSize" />

    <TextView
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:id="@+id/shapeType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Shape"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:orientation="horizontal"
        android:id="@+id/shapeColors"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="8dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_alignParentEnd="true"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shapeOpacity" />
</androidx.constraintlayout.widget.ConstraintLayout>
